--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 </head>
 <body>
 <script>
+  function hello(){
 alert("Hello World!")
+  }
 </script>
+  <button onclick="hello()">Hello World</button>
 </body>
 </html
